--- a/public/blog-section.html
+++ b/public/blog-section.html
@@ -17,8 +17,9 @@
         <header class="w-full shadow-sm">
             <div class="container px-4 mx-auto">
                 <!-- Nav starts -->
+
                 <nav class="flex justify-between items-center mx-auto py-6 max-w-[1200px]">
-                    <a class="text-3xl font-semibold leading-none mr-14" href="../index.html">
+                    <a class="text-3xl font-semibold leading-none min-w-[200px]" href="./index.html">
                         <img class="w-20" src="./metis-assets/images/logo2.svg" alt="" height="auto" />
                     </a>
                     <div class="lg:hidden">
@@ -30,24 +31,21 @@
                         </button>
                     </div>
                     <ul class="hidden lg:flex lg:items-center lg:w-auto lg:space-x-12">
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Product</a></li>
+                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./tools.html">Product</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Company</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Features</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./blogs.html">Blogs</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./team.html">Team</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./contact.html">Contact Us</a></li>
                     </ul>
-                    <div class="hidden lg:block">
-                        <a class="mr-2 inline-block px-4 py-3 text-xs text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded" href="./signin.html">Log In</a
-                        ><a class="inline-block px-4 py-3 text-xs font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 text-white rounded" href="./signup.html">Sign Up</a>
-                    </div>
+                    <div class="hidden lg:flex justify-end min-w-[200px]" id="login-container"></div>
                 </nav>
 
                 <div class="hidden navbar-menu fixed top-0 left-0 bottom-0 w-5/6 max-w-sm z-50">
                     <div class="navbar-backdrop fixed inset-0 bg-blueGray-800 opacity-25"></div>
                     <nav class="relative flex flex-col py-6 px-6 w-full h-full bg-white border-r overflow-y-auto">
                         <div class="flex items-center mb-8">
-                            <a class="mr-auto text-3xl font-semibold leading-none" href="../index.html">
+                            <a class="mr-auto text-3xl font-semibold leading-none" href="./index.html">
                                 <img class="h-20" src="./metis-assets/images/logo2.svg" alt="" width="auto" />
                             </a>
                             <button class="navbar-close">
@@ -66,14 +64,14 @@
                                 <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="./contact.html">Contact Us</a></li>
                             </ul>
                             <div class="mt-2 pt-6 border-t border-blueGray-100">
-                                <a class="block px-4 py-3 mb-3 text-xs text-center font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 text-white rounded" href="./signup.html">Sign Up</a
-                                ><a class="block px-4 py-3 mb-2 text-xs text-center text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded" href="./signin.html">Log In</a>
+                                <a class="block px-4 py-3 mb-3 text-xs text-center font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 text-white rounded" href="#">Sign Up</a
+                                ><a class="block px-4 py-3 mb-2 text-xs text-center text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded" href="#">Log In</a>
                             </div>
                         </div>
                         <div class="mt-auto">
                             <p class="my-4 text-xs text-blueGray-400">
                                 <span>Get in Touch</span>
-                                <a class="text-indigo-600 hover:text-indigo-600 underline" href="./contact.html">hello@writee.in</a>
+                                <a class="text-indigo-600 hover:text-indigo-600 underline" href="#">hello@writee.in</a>
                             </p>
                             <a class="inline-block px-1" href="#">
                                 <img src="./metis-assets/icons/facebook-blue.svg" alt="" />
@@ -99,7 +97,7 @@
         <main class="mx-8 lg:mx-0 lg:my-2">
             <section class="relative flex flex-wrap w-full">
                 <div class="w-full px-4 py-2 lg:w-1/2 sm:px-6 lg:px-4 sm:py-16 lg:py-8 flex lg:justify-end">
-                    <form action="" nme="contentForm" class="w-full lg:w-5/6 mb-0 space-y-4">
+                    <form action="" name="contentForm" class="w-full lg:w-5/6 mb-0 space-y-4">
                         <input type="text" class="appearance-none w-full py-3 px-4 bg-[#F9FAFC] text-gray-700 focus:outline-purple-500 placeholder-[#a0aab6] placeholder:font-semibold rounded-lg text-sm font-medium shadow" placeholder="Enter The Topic" />
 
                         <input type="number" class="appearance-none w-full py-3 px-4 bg-[#F9FAFC] text-gray-700 focus:outline-purple-500 placeholder-[#a0aab6] placeholder:font-semibold rounded-lg text-sm font-medium shadow" placeholder="Enter Number Of Words..." />
@@ -119,8 +117,8 @@
                         </div>
 
                         <div class="flex sm:flex-row items-center gap-4 pt-2">
-                            <button class="relative text-indigo-600 hover:text-white hover:bg-indigo-600 inline-block px-6 md:px-8 py-3 overflow-hidden border rounded border-indigo-600 group focus:outline-none focus:ring min-w-[100px] md:min-w-[180px] text-sm md:text-base">Get Blog Section</button>
-                            <button class="relative inline-block px-6 md:px-8 py-3 overflow-hidden border rounded border-red-600 group text-sm md:text-base focus:outline-none text-red-600 focus:ring hover:bg-red-600 hover:text-white min-w-[100px] md:min-w-[180px]">Reset Content</button>
+                            <button class="text-indigo-600 hover:text-white hover:bg-indigo-600 px-8 py-3 border rounded border-indigo-600 group focus:outline-none focus:ring min-w-[120px] md:min-w-[200px] text-sm md:text-base">Get Blog Section</button>
+                            <button class="px-6 md:px-8 py-3 border rounded border-red-600 group text-sm md:text-base focus:outline-none text-red-600 focus:ring hover:bg-red-600 hover:text-white min-w-[120px] md:min-w-[200px]">Reset Content</button>
                         </div>
                     </form>
                 </div>
