--- a/public/profile.html
+++ b/public/profile.html
@@ -14,34 +14,31 @@
         <script defer src="./js/profile.js"></script>
     </head>
     <body class="antialiased bg-body text-body font-body">
-        <header class="w-full shadow-sm mb-3">
+        <header class="w-full shadow-sm">
             <div class="container px-4 mx-auto">
                 <!-- Nav starts -->
 
                 <nav class="flex justify-between items-center mx-auto py-6 max-w-[1200px]">
-                    <a class="text-3xl font-semibold leading-none mr-14" href="./index.html">
-                        <img class="w-20" src="./metis-assets/images/logo2.svg" height="auto" />
+                    <a class="text-3xl font-semibold leading-none min-w-[200px]" href="./index.html">
+                        <img class="w-20" src="./metis-assets/images/logo2.svg" alt="" height="auto" />
                     </a>
                     <div class="lg:hidden">
                         <button class="navbar-burger flex items-center py-2 px-3 text-indigo-600 hover:text-indigo-700 rounded border border-indigo-200 hover:border-indigo-300">
-                            <svg class="fill-current h-4 w-4" viewbox="0 0 20 20">
+                            <svg class="fill-current h-4 w-4" viewbox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                                 <title>Mobile Menu</title>
                                 <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
                             </svg>
                         </button>
                     </div>
                     <ul class="hidden lg:flex lg:items-center lg:w-auto lg:space-x-12">
-                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Product</a></li>
+                        <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./tools.html">Product</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Company</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="#">Features</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./blogs.html">Blogs</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./team.html">Team</a></li>
                         <li><a class="text-sm text-blueGray-400 hover:text-blueGray-500" href="./contact.html">Contact Us</a></li>
                     </ul>
-                    <div class="hidden lg:block">
-                        <a class="mr-2 inline-block px-4 py-3 text-xs text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded" href="./signin.html">Log In</a
-                        ><a class="inline-block px-4 py-3 text-xs font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 text-white rounded" href="./signup.html">Sign Up</a>
-                    </div>
+                    <div class="hidden lg:flex justify-end min-w-[200px]" id="login-container"></div>
                 </nav>
 
                 <div class="hidden navbar-menu fixed top-0 left-0 bottom-0 w-5/6 max-w-sm z-50">
@@ -52,7 +49,7 @@
                                 <img class="h-20" src="./metis-assets/images/logo2.svg" alt="" width="auto" />
                             </a>
                             <button class="navbar-close">
-                                <svg class="h-6 w-6 text-blueGray-400 cursor-pointer hover:text-blueGray-500" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+                                <svg class="h-6 w-6 text-blueGray-400 cursor-pointer hover:text-blueGray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
                                 </svg>
                             </button>
@@ -67,8 +64,8 @@
                                 <li class="mb-1"><a class="block p-4 text-sm text-blueGray-500 hover:bg-blue-50 hover:text-indigo-600" href="./contact.html">Contact Us</a></li>
                             </ul>
                             <div class="mt-2 pt-6 border-t border-blueGray-100">
-                                <a class="block px-4 py-3 mb-3 text-xs text-center font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 text-white rounded" href="#">Sign Up</a>
-                                <a class="block px-4 py-3 mb-2 text-xs text-center text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded" href="#">Log In</a>
+                                <a class="block px-4 py-3 mb-3 text-xs text-center font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 text-white rounded" href="#">Sign Up</a
+                                ><a class="block px-4 py-3 mb-2 text-xs text-center text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded" href="#">Log In</a>
                             </div>
                         </div>
                         <div class="mt-auto">
@@ -77,13 +74,13 @@
                                 <a class="text-indigo-600 hover:text-indigo-600 underline" href="#">hello@writee.in</a>
                             </p>
                             <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/facebook-blue.svg" />
+                                <img src="./metis-assets/icons/facebook-blue.svg" alt="" />
                             </a>
                             <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/twitter-blue.svg" />
+                                <img src="./metis-assets/icons/twitter-blue.svg" alt="" />
                             </a>
                             <a class="inline-block px-1" href="#">
-                                <img src="./metis-assets/icons/instagram-blue.svg" />
+                                <img src="./metis-assets/icons/instagram-blue.svg" alt="" />
                             </a>
                         </div>
                     </nav>
