--- a/public/signup.html
+++ b/public/signup.html
@@ -23,29 +23,29 @@
             <div class="container px-4 mx-auto">
                 <div class="relative flex flex-wrap">
                     <div class="lg:flex lg:flex-col w-full lg:w-1/2 py-6 lg:pr-20">
-                        <div class="flex justify-between items-center mb-12 lg:mb-20">
+                        <div class="flex justify-between items-center mb-6 lg:mb-16">
                             <a class="text-3xl font-semibold leading-none" href="../index.html">
                                 <img class="h-20" src="./metis-assets/images/logo2.svg" alt="" width="auto" />
                             </a>
                             <a class="inline-block px-4 py-3 text-xs text-indigo-600 hover:text-indigo-700 font-semibold leading-none border border-indigo-200 hover:border-indigo-300 rounded" href="./signin.html">Sign In</a>
                         </div>
-                        <div class="w-full max-w-lg mx-auto lg:mx-0 my-auto">
+                        <div class="w-full max-w-lg mx-auto lg:mx-0">
                             <span class="text-sm text-blueGray-400">Sign Up</span>
-                            <h4 class="mb-6 text-3xl">Create an account</h4>
+                            <h4 class="mb-6 text-3xl">Create My Account</h4>
                             <div class="flex -mx-3">
                                 <div class="flex w-1/2 px-3">
                                     <div class="flex w-full mb-4 px-4 bg-blueGray-50 rounded">
-                                        <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="text" placeholder="First name" />
+                                        <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="text" placeholder="First Name" name="first-name" id="first-name" />
                                     </div>
                                 </div>
                                 <div class="flex w-1/2 px-3">
                                     <div class="flex w-full mb-4 px-4 bg-blueGray-50 rounded">
-                                        <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="text" placeholder="Last name" />
+                                        <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="text" placeholder="Last Name" id="last-name" name="last-name" />
                                     </div>
                                 </div>
                             </div>
                             <div class="flex mb-4 px-4 bg-blueGray-50 rounded">
-                                <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="email" placeholder="name@email.com" />
+                                <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="email" placeholder="name@email.com" name="email-address" id="email-address" />
                                 <svg class="h-6 w-6 ml-4 my-auto text-blueGray-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
                                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 12a4 4 0 10-8 0 4 4 0 008 0zm0 0v1.5a2.5 2.5 0 005 0V12a9 9 0 10-9 9m4.5-1.206a8.959 8.959 0 01-4.5 1.207"></path>
                                 </svg>
@@ -53,17 +53,26 @@
                             <div class="flex -mx-3">
                                 <div class="flex w-1/2 px-3">
                                     <div class="flex w-full mb-4 px-4 bg-blueGray-50 rounded">
-                                        <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="text" placeholder="Company Name" />
+                                        <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="text" placeholder="Company Name" name="company-name" id="company-name" />
                                     </div>
                                 </div>
                                 <div class="flex w-1/2 px-3">
                                     <div class="flex w-full mb-4 px-4 bg-blueGray-50 rounded">
-                                        <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="text" placeholder="Phone Number" />
+                                        <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="text" placeholder="Phone Number" id="phone-number" name="phone-number" />
                                     </div>
                                 </div>
                             </div>
                             <div class="flex mb-6 px-4 bg-blueGray-50 rounded">
-                                <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="password" placeholder="Enter your password" />
+                                <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="password" placeholder="Enter Your Password" name="enter-password" id="enter-password" />
+                                <button class="ml-4">
+                                    <svg class="h-6 w-6 my-auto text-blueGray-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z"></path>
+                                    </svg>
+                                </button>
+                            </div>
+                            <div class="flex mb-6 px-4 bg-blueGray-50 rounded">
+                                <input class="w-full py-4 text-xs placeholder-blueGray-400 font-semibold leading-none bg-blueGray-50 outline-none" type="password" placeholder="Confirm Your Password" id="confirm-password" name="confirm-password" />
                                 <button class="ml-4">
                                     <svg class="h-6 w-6 my-auto text-blueGray-300" xmlns="http://www.w3.org/2000/svg" fill="none" viewbox="0 0 24 24" stroke="currentColor">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z"></path>
@@ -74,7 +83,7 @@
                             <button class="block w-full p-4 text-center text-xs text-white font-semibold leading-none bg-indigo-600 hover:bg-indigo-700 rounded">Sign Up</button>
                         </div>
                         <div>
-                            <p class="mt-8 text-xs text-blueGray-400 text-center lg:text-left"><a class="underline hover:text-blueGray-500" href="#">Police privacy</a> and <a class="underline hover:text-blueGray-500" href="#">Terms of Use</a></p>
+                            <p class="mt-5 text-xs text-blueGray-400 text-center lg:text-left"><a class="underline hover:text-blueGray-500" href="#">Police privacy</a> and <a class="underline hover:text-blueGray-500" href="#">Terms of Use</a></p>
                         </div>
                     </div>
                 </div>
