--- a/public/blog.html
+++ b/public/blog.html
@@ -11,9 +11,13 @@
         <link rel="stylesheet" href="./css/tailwind/tailwind.min.css" />
         <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
         <script src="./js/main.js"></script>
+        <script src="./js/header.js"></script>
+        <script src="./js/footer.js"></script>
     </head>
 
     <body class="antialiased bg-body text-body font-body relative">
+        <header-component></header-component>
+
         <div class="absolute h-20 px-8 flex w-full items-center">
             <a class="text-white bg-transparent transition-all hover:bg-[#9c9c9c8c] font-medium rounded-lg text-sm p-3 text-center inline-flex items-center focus:outline-none active:outline-none" href="./blogs.html">
                 <svg version="1.1" xmlns="http://www.w3.org/2000/svg" width="400.004px" viewBox="0 0 400.004 400.004" style="enable-background: new 0 0 400.004 400.004" class="h-5 w-5">
@@ -66,5 +70,6 @@
                 </div>
             </div>
         </section>
+        <footer-component></footer-component>
     </body>
 </html>
